# notes_web_app_Django

./: pyproject.toml
notes/noteapp/: forms.py  models.py  views.py
notes/noteapp/migrations/: 0001_initial.py  0002_note_user_tag_user_alter_tag_name_and_more.py
notes/noteapp/templates/noteapp/: base.html  detail.html  index.html  note.html
notes/noteapp/templatetags/: extract_tags.py
notes/notes/: settings.py  urls.py
notes/users/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
notes/users/migrations/: 0001_initial.py
notes/users/templates/users/: login.html  profile.html  signup.html
